<resources>
    <string name="app_name">Sundial</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="protect_yourself">PROTECT YOURSELF</string>
    <string name="the_sun_is_stronger_than_you">THE SUN IS STRONGER THAN YOU</string>
    <string name="app_logo">app logo</string>
    <string name="enter_username">Enter Username</string>
    <string name="login">LOGIN</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="verify_your_email_address">VERIFY YOUR EMAIL ADDRESS</string>
    <string name="verify">verify</string>
    <string name="logout">logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="new_to_sundial_register_below">New to Sundial? Register below</string>
    <string name="title_home">Home</string>
    <string name="title_info">Info</string>
    <string name="title_sun">Sun</string>
    <string name="title_personal">Personal</string>
    <string name="UVtext">UV Index = 2</string>
    <string name="location_text">"Latitude: %1$.4f \n Longitude: %2$.4f\n Timestamp: %3$tr"</string>
    <string name="location_permission_denied">Permission Denied</string>
    <string name="no_location">No Location</string>
    <string name="vitamin_D_header">Vitamin D Intake</string>
    <string name="basic_Dosage">Recommended Daily Vitamin D Intake</string>
    <string name="enter_weight_lbs">Enter Weight (lbs)</string>
    <string name="nav_details">Please visit the following pages\nfor more information.</string>
    <string name="recommend">Your current recommendation:</string>
    <string name="vitamin_d_intake_today">Absorbed Vitamin D</string>
    <string name="sunPercentage">Percentage of skin exposed to direct sunlight for minimum 15 mins.</string>
    <string name="enterSunPercent">Enter percent (integer)</string>
    <string name="skin_type">Skin Type:</string>
    <string-array name="skin_tones">
        <item>Type 1</item>
        <item>Type 2</item>
        <item>Type 3</item>
        <item>Type 4</item>
        <item>Type 5</item>
        <item>Type 6</item>
    </string-array>
    <string name="info_str">Check out these additional resources…</string>
    <string name="info1">UV Radiation - CDC</string>
    <string name="info1_sum">Information About UV Radiation</string>
    <string name="skin_info">Fitzpatrick Skin Types</string>
    <string name="article_title">Helpful Articles</string>
    <string name="article1">Continue to <a href="https://www.cdc.gov/nceh/features/uv-radiation-safety/index.html#:~:text=times%20a%20week.-,Risks,serious%20health%20issues%2C%20including%20cancer">Full Article</a></string>
    <string name="info2">UV Index Scale - EPA</string>
    <string name="info2_sum">Sun Protection Based on UV Index</string>
    <string name="article2">Continue to <a href="https://www.cdc.gov/nceh/features/uv-radiation-safety/index.html#:~:text=times%20a%20week.-,Risks,serious%20health%20issues%2C%20including%20cancer">Full Article</a></string>
    <string name="info3">Vitamin D - Healthline</string>
    <string name="info3_sum">Can Vitamin D Help You Lose Weight?</string>
    <string name="article3">Continue to <a href="https://www.cdc.gov/nceh/features/uv-radiation-safety/index.html#:~:text=times%20a%20week.-,Risks,serious%20health%20issues%2C%20including%20cancer">Full Article</a></string>
</resources>